--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,4 +4,6 @@
           android:versionCode="1"
           android:versionName="0.0.1">
 
+    <uses-sdk android:minSdkVersion="14" />
+
 </manifest>
